# AI-hw2

./: .gitignore  Cargo.toml  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: full-ci.yml
sliding-puzzle/: Cargo.toml
sliding-puzzle-core/: Cargo.toml
sliding-puzzle-core/src/: board.rs  lib.rs  matrix.rs  vec2.rs
sliding-puzzle-search/: Cargo.toml
sliding-puzzle-search/src/: search.rs
sliding-puzzle/benches/: my_benchmark.rs
sliding-puzzle/src/: main.rs  search.rs
sliding_puzzle/: all.html  enum.Command.html  fn.get_output.html  fn.main.html  fn.print_malloc_stats.html  fn.write_fail_result.html  fn.write_success_result.html  index.html  sidebar-items.js  static.GLOBAL.html  struct.Cli.html
sliding_puzzle/search/: enum.Algorithm.html  fn.execute.html  index.html  sidebar-items.js
sliding_puzzle/util/: fn.vec2_from_str.html  index.html  sidebar-items.js
sliding_puzzle_core/: all.html  enum.Dir.html  index.html  sidebar-items.js  struct.Block.html  struct.Board.html  struct.BoardState.html  struct.Matrix2D.html  struct.Vec2.html  type.Move.html
sliding_puzzle_core/board/: enum.Dir.html  struct.Block.html  struct.Board.html  struct.BoardState.html  type.Move.html
sliding_puzzle_core/matrix/: struct.Matrix2D.html
sliding_puzzle_core/vec2/: struct.Vec2.html
sliding_puzzle_search/: all.html  index.html  sidebar-items.js
sliding_puzzle_search/search/: fn.idastar.html  fn.iddfs.html  fn.manual.html  index.html  sidebar-items.js
src/: board.rs  main.rs  matrix.rs  search.rs  util.rs  vec2.rs
(+38 files in other folders)
